# RCTruck

./: .gitignore  platformio.ini  sdkconfig.esp32dev
src/: CMakeLists.txt  Truck.cpp  Truck.h  sketch.cpp
